# MCPrailway

./: .env  Dockerfile  Procfile  flight_mcp_stdio.py  mcp_starter.py  pyproject.toml  requirements.deploy.txt  requirements.txt
mcp-bearer-token/: mcp_starter.py
