[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "1.0.0"
description = "MCP Server with Flask wrapper for Railway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "finnhub-python>=2.4.0",
    "pydantic>=2.0.0",
    "markdownify>=0.11.6",
    "httpx>=0.25.0",
    "readabilipy>=0.2.0",
    "langchain-community>=0.0.10",
    "akinator-py==0.2.5",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "arxiv>=2.2.0",
]

[project.scripts]
start = "mcp_starter:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
